# cmake_test_project

./: .gitignore  CMakeLists.txt  README.md  cmake_uninstall_rule.cmake.in  config.h  config.h.in  main.cpp
calculator/: CMakeLists.txt  config.cmake
calculator/include/private/calculator/: sub.h  sum.h
calculator/include/public/calculator/: math.h
calculator/src/: math.cpp  sub.cpp  sum.cpp
common/: CMakeLists.txt
common/include/common/: type_def.h
new_test_lib/: CMakeLists.txt
new_test_lib/include/public/new_test_lib/: new_calc.h
new_test_lib/src/: new_calc.cpp
super_calc/: CMakeLists.txt
super_calc/include/super_calc/: SuperCalc.h
super_calc/src/: SuperCalc.cpp
